# multiple_numbers

./: .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
multiple_numbers/: __init__.py  multiple_numbers.py
multiplicable_numbers/: __init__.py  multiplicable_numbers.py
scripts/: detects-multiplicable-numbers  detects-multiplicable-numbers.py
tests/: test_detects_multiplicable_numbers.py  test_display_detections.py  test_displays_detected_numbers.py  test_displays_literal_numbers.py  test_multiplicable_validations.py
