[metadata]
name = multiple_numbers
version = 0.0.1
url = https://github.com/samukasmk/multiple_numbers
author = Samuel Sampaio
author_email = samukasmk@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = Apache 2.0
description = A command line tools that tells if is multiple numbers
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6